--- a/notebook/iris_classification.ipynb
+++ b/notebook/iris_classification.ipynb
@@ -320,164 +320,164 @@
     {
      "data": {
       "text/plain": [
-       "[array([[6.5, 2.8, 4.6, 1.5],\n",
-       "        [4.3, 3. , 1.1, 0.1],\n",
-       "        [5.6, 2.5, 3.9, 1.1],\n",
-       "        [6.1, 3. , 4.9, 1.8],\n",
-       "        [6.3, 3.4, 5.6, 2.4],\n",
-       "        [5.8, 2.7, 3.9, 1.2],\n",
-       "        [6.1, 2.6, 5.6, 1.4],\n",
-       "        [6.7, 3.1, 4.7, 1.5],\n",
-       "        [5.5, 2.3, 4. , 1.3],\n",
-       "        [5. , 3.5, 1.3, 0.3],\n",
-       "        [5.7, 2.8, 4.5, 1.3],\n",
-       "        [5.1, 2.5, 3. , 1.1],\n",
-       "        [6.1, 2.8, 4.7, 1.2],\n",
-       "        [6. , 2.7, 5.1, 1.6],\n",
-       "        [6. , 3.4, 4.5, 1.6],\n",
-       "        [7.4, 2.8, 6.1, 1.9],\n",
-       "        [5.2, 2.7, 3.9, 1.4],\n",
-       "        [7.7, 2.8, 6.7, 2. ],\n",
-       "        [4.8, 3.4, 1.9, 0.2],\n",
-       "        [6.1, 2.8, 4. , 1.3],\n",
-       "        [5. , 3.6, 1.4, 0.2],\n",
-       "        [4.9, 2.4, 3.3, 1. ],\n",
-       "        [6.1, 2.9, 4.7, 1.4],\n",
-       "        [5. , 3.4, 1.5, 0.2],\n",
-       "        [4.9, 2.5, 4.5, 1.7],\n",
-       "        [6. , 2.2, 4. , 1. ],\n",
-       "        [5.4, 3.4, 1.5, 0.4],\n",
-       "        [5.7, 4.4, 1.5, 0.4],\n",
-       "        [6.5, 3.2, 5.1, 2. ],\n",
-       "        [5.1, 3.7, 1.5, 0.4],\n",
-       "        [5.4, 3.7, 1.5, 0.2],\n",
-       "        [6.3, 2.5, 4.9, 1.5],\n",
-       "        [5. , 3.4, 1.6, 0.4],\n",
-       "        [6.7, 3. , 5. , 1.7],\n",
-       "        [6.3, 2.8, 5.1, 1.5],\n",
-       "        [6.2, 2.8, 4.8, 1.8],\n",
-       "        [7.2, 3.6, 6.1, 2.5],\n",
-       "        [5.2, 3.4, 1.4, 0.2],\n",
-       "        [6.3, 2.9, 5.6, 1.8],\n",
-       "        [6.2, 2.9, 4.3, 1.3],\n",
-       "        [5.2, 3.5, 1.5, 0.2],\n",
-       "        [7.2, 3.2, 6. , 1.8],\n",
-       "        [6.7, 2.5, 5.8, 1.8],\n",
-       "        [4.6, 3.6, 1. , 0.2],\n",
-       "        [5.1, 3.8, 1.6, 0.2],\n",
-       "        [5.5, 2.4, 3.8, 1.1],\n",
-       "        [4.8, 3. , 1.4, 0.1],\n",
-       "        [4.7, 3.2, 1.6, 0.2],\n",
-       "        [4.8, 3. , 1.4, 0.3],\n",
-       "        [5.4, 3.9, 1.3, 0.4],\n",
-       "        [5.5, 2.4, 3.7, 1. ],\n",
-       "        [4.6, 3.2, 1.4, 0.2],\n",
-       "        [6.4, 2.8, 5.6, 2.2],\n",
-       "        [5.6, 3. , 4.5, 1.5],\n",
-       "        [6.3, 2.7, 4.9, 1.8],\n",
-       "        [5.8, 2.7, 5.1, 1.9],\n",
-       "        [6.4, 3.2, 4.5, 1.5],\n",
-       "        [6.8, 3. , 5.5, 2.1],\n",
-       "        [5.1, 3.8, 1.9, 0.4],\n",
-       "        [6.3, 2.5, 5. , 1.9],\n",
-       "        [6.8, 2.8, 4.8, 1.4],\n",
-       "        [5. , 3.3, 1.4, 0.2],\n",
-       "        [7.3, 2.9, 6.3, 1.8],\n",
-       "        [6.6, 2.9, 4.6, 1.3],\n",
-       "        [6.3, 3.3, 6. , 2.5],\n",
-       "        [6.4, 3.2, 5.3, 2.3],\n",
-       "        [5.7, 3. , 4.2, 1.2],\n",
-       "        [7.9, 3.8, 6.4, 2. ],\n",
-       "        [5.8, 2.8, 5.1, 2.4],\n",
-       "        [5.8, 2.7, 4.1, 1. ],\n",
-       "        [5.7, 2.6, 3.5, 1. ],\n",
-       "        [6.4, 3.1, 5.5, 1.8],\n",
-       "        [5.7, 3.8, 1.7, 0.3],\n",
-       "        [6.4, 2.8, 5.6, 2.1],\n",
-       "        [7.6, 3. , 6.6, 2.1],\n",
-       "        [6.6, 3. , 4.4, 1.4],\n",
-       "        [4.6, 3.4, 1.4, 0.3],\n",
-       "        [6.5, 3. , 5.2, 2. ],\n",
-       "        [6. , 3. , 4.8, 1.8],\n",
-       "        [6.4, 2.7, 5.3, 1.9],\n",
-       "        [6.8, 3.2, 5.9, 2.3],\n",
-       "        [5.7, 2.5, 5. , 2. ],\n",
-       "        [6.2, 3.4, 5.4, 2.3],\n",
-       "        [7.1, 3. , 5.9, 2.1],\n",
-       "        [7.7, 3.8, 6.7, 2.2],\n",
-       "        [6. , 2.9, 4.5, 1.5],\n",
-       "        [6.7, 3.1, 5.6, 2.4],\n",
-       "        [5.5, 3.5, 1.3, 0.2],\n",
-       "        [5.2, 4.1, 1.5, 0.1],\n",
-       "        [5. , 3. , 1.6, 0.2],\n",
-       "        [5.4, 3.4, 1.7, 0.2],\n",
-       "        [5.4, 3. , 4.5, 1.5],\n",
-       "        [5.1, 3.5, 1.4, 0.2],\n",
-       "        [5.9, 3. , 4.2, 1.5],\n",
-       "        [7.2, 3. , 5.8, 1.6],\n",
-       "        [4.9, 3.1, 1.5, 0.2],\n",
-       "        [6.7, 3.1, 4.4, 1.4],\n",
-       "        [6.7, 3. , 5.2, 2.3],\n",
-       "        [5. , 3.2, 1.2, 0.2],\n",
-       "        [5.6, 2.9, 3.6, 1.3],\n",
-       "        [6.5, 3. , 5.8, 2.2],\n",
-       "        [5.6, 2.7, 4.2, 1.3],\n",
-       "        [7.7, 2.6, 6.9, 2.3],\n",
-       "        [4.7, 3.2, 1.3, 0.2],\n",
-       "        [5. , 2.3, 3.3, 1. ],\n",
-       "        [5.1, 3.8, 1.5, 0.3],\n",
-       "        [6.9, 3.2, 5.7, 2.3],\n",
-       "        [5.5, 2.6, 4.4, 1.2],\n",
-       "        [4.5, 2.3, 1.3, 0.3],\n",
-       "        [5.8, 2.6, 4. , 1.2],\n",
-       "        [5.9, 3. , 5.1, 1.8],\n",
-       "        [5.1, 3.3, 1.7, 0.5]]),\n",
-       " array([[4.8, 3.4, 1.6, 0.2],\n",
-       "        [6.9, 3.1, 5.1, 2.3],\n",
-       "        [5. , 2. , 3.5, 1. ],\n",
-       "        [7.7, 3. , 6.1, 2.3],\n",
-       "        [4.4, 3.2, 1.3, 0.2],\n",
-       "        [5.3, 3.7, 1.5, 0.2],\n",
-       "        [5. , 3.5, 1.6, 0.6],\n",
-       "        [4.4, 2.9, 1.4, 0.2],\n",
-       "        [5.6, 3. , 4.1, 1.3],\n",
-       "        [6.7, 3.3, 5.7, 2.1],\n",
-       "        [4.9, 3.1, 1.5, 0.1],\n",
-       "        [5.8, 4. , 1.2, 0.2],\n",
-       "        [6.9, 3.1, 4.9, 1.5],\n",
-       "        [4.8, 3.1, 1.6, 0.2],\n",
-       "        [5.5, 2.5, 4. , 1.3],\n",
-       "        [4.6, 3.1, 1.5, 0.2],\n",
-       "        [6. , 2.2, 5. , 1.5],\n",
-       "        [6.3, 2.3, 4.4, 1.3],\n",
-       "        [7. , 3.2, 4.7, 1.4],\n",
-       "        [5.6, 2.8, 4.9, 2. ],\n",
-       "        [5.7, 2.9, 4.2, 1.3],\n",
-       "        [6.5, 3. , 5.5, 1.8],\n",
-       "        [4.4, 3. , 1.3, 0.2],\n",
-       "        [6.9, 3.1, 5.4, 2.1],\n",
-       "        [4.9, 3.6, 1.4, 0.1],\n",
-       "        [5.9, 3.2, 4.8, 1.8],\n",
+       "[array([[5.8, 2.7, 3.9, 1.2],\n",
        "        [5.7, 2.8, 4.1, 1.3],\n",
+       "        [6.1, 3. , 4.6, 1.4],\n",
+       "        [6.2, 2.9, 4.3, 1.3],\n",
+       "        [4.9, 2.5, 4.5, 1.7],\n",
+       "        [5.6, 3. , 4.5, 1.5],\n",
+       "        [6.7, 3.1, 4.7, 1.5],\n",
+       "        [4.8, 3.1, 1.6, 0.2],\n",
+       "        [6.5, 2.8, 4.6, 1.5],\n",
+       "        [5.7, 3.8, 1.7, 0.3],\n",
+       "        [6.7, 3.3, 5.7, 2.1],\n",
+       "        [5.6, 2.5, 3.9, 1.1],\n",
+       "        [5.6, 3. , 4.1, 1.3],\n",
        "        [5.8, 2.7, 5.1, 1.9],\n",
+       "        [6.7, 3. , 5.2, 2.3],\n",
+       "        [5.3, 3.7, 1.5, 0.2],\n",
+       "        [4.4, 2.9, 1.4, 0.2],\n",
+       "        [7.3, 2.9, 6.3, 1.8],\n",
+       "        [5.7, 2.8, 4.5, 1.3],\n",
+       "        [7.4, 2.8, 6.1, 1.9],\n",
        "        [4.9, 3. , 1.4, 0.2],\n",
-       "        [5.1, 3.4, 1.5, 0.2],\n",
-       "        [6.4, 2.9, 4.3, 1.3],\n",
+       "        [7.2, 3. , 5.8, 1.6],\n",
+       "        [5.5, 2.6, 4.4, 1.2],\n",
+       "        [6.8, 2.8, 4.8, 1.4],\n",
+       "        [6.4, 3.1, 5.5, 1.8],\n",
+       "        [6. , 2.2, 4. , 1. ],\n",
+       "        [4.6, 3.4, 1.4, 0.3],\n",
+       "        [5. , 3.5, 1.3, 0.3],\n",
        "        [5.1, 3.5, 1.4, 0.3],\n",
-       "        [5.4, 3.9, 1.7, 0.4],\n",
-       "        [6.7, 3.3, 5.7, 2.5],\n",
-       "        [6.3, 3.3, 4.7, 1.6],\n",
-       "        [6.2, 2.2, 4.5, 1.5],\n",
+       "        [5.4, 3.9, 1.3, 0.4],\n",
+       "        [6.4, 2.9, 4.3, 1.3],\n",
+       "        [5. , 3.4, 1.5, 0.2],\n",
+       "        [5.1, 3.5, 1.4, 0.2],\n",
+       "        [7.7, 2.8, 6.7, 2. ],\n",
+       "        [6.3, 2.8, 5.1, 1.5],\n",
+       "        [6.2, 3.4, 5.4, 2.3],\n",
+       "        [6.1, 2.9, 4.7, 1.4],\n",
+       "        [5.1, 3.3, 1.7, 0.5],\n",
+       "        [5.5, 2.4, 3.8, 1.1],\n",
+       "        [7.7, 3.8, 6.7, 2.2],\n",
+       "        [5.8, 4. , 1.2, 0.2],\n",
+       "        [6.7, 3.1, 4.4, 1.4],\n",
+       "        [6.1, 3. , 4.9, 1.8],\n",
+       "        [5.1, 2.5, 3. , 1.1],\n",
+       "        [6.3, 3.4, 5.6, 2.4],\n",
+       "        [6.6, 2.9, 4.6, 1.3],\n",
        "        [5.5, 4.2, 1.4, 0.2],\n",
-       "        [6.1, 3. , 4.6, 1.4]]),\n",
-       " array([1, 0, 1, 2, 2, 1, 2, 1, 1, 0, 1, 1, 1, 1, 1, 2, 1, 2, 0, 1, 0, 1,\n",
-       "        1, 0, 2, 1, 0, 0, 2, 0, 0, 1, 0, 1, 2, 2, 2, 0, 2, 1, 0, 2, 2, 0,\n",
-       "        0, 1, 0, 0, 0, 0, 1, 0, 2, 1, 2, 2, 1, 2, 0, 2, 1, 0, 2, 1, 2, 2,\n",
-       "        1, 2, 2, 1, 1, 2, 0, 2, 2, 1, 0, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 0,\n",
-       "        0, 0, 0, 1, 0, 1, 2, 0, 1, 2, 0, 1, 2, 1, 2, 0, 1, 0, 2, 1, 0, 1,\n",
-       "        2, 0]),\n",
-       " array([0, 2, 1, 2, 0, 0, 0, 0, 1, 2, 0, 0, 1, 0, 1, 0, 2, 1, 1, 2, 1, 2,\n",
-       "        0, 2, 0, 1, 1, 2, 0, 0, 1, 0, 0, 2, 1, 1, 0, 1])]"
+       "        [6.4, 2.8, 5.6, 2.2],\n",
+       "        [6.7, 3.3, 5.7, 2.5],\n",
+       "        [6.3, 2.9, 5.6, 1.8],\n",
+       "        [4.3, 3. , 1.1, 0.1],\n",
+       "        [5.9, 3. , 5.1, 1.8],\n",
+       "        [4.8, 3.4, 1.6, 0.2],\n",
+       "        [5. , 3.5, 1.6, 0.6],\n",
+       "        [4.7, 3.2, 1.3, 0.2],\n",
+       "        [4.4, 3. , 1.3, 0.2],\n",
+       "        [5.5, 2.4, 3.7, 1. ],\n",
+       "        [4.8, 3. , 1.4, 0.3],\n",
+       "        [7.9, 3.8, 6.4, 2. ],\n",
+       "        [5.1, 3.8, 1.5, 0.3],\n",
+       "        [7.1, 3. , 5.9, 2.1],\n",
+       "        [5.1, 3.8, 1.9, 0.4],\n",
+       "        [6.9, 3.1, 5.4, 2.1],\n",
+       "        [5.1, 3.8, 1.6, 0.2],\n",
+       "        [4.4, 3.2, 1.3, 0.2],\n",
+       "        [5. , 3.6, 1.4, 0.2],\n",
+       "        [4.5, 2.3, 1.3, 0.3],\n",
+       "        [5.4, 3.9, 1.7, 0.4],\n",
+       "        [5.8, 2.7, 4.1, 1. ],\n",
+       "        [6.3, 2.7, 4.9, 1.8],\n",
+       "        [7.7, 2.6, 6.9, 2.3],\n",
+       "        [6.2, 2.8, 4.8, 1.8],\n",
+       "        [5.4, 3.4, 1.7, 0.2],\n",
+       "        [5.8, 2.7, 5.1, 1.9],\n",
+       "        [5. , 3.2, 1.2, 0.2],\n",
+       "        [6.3, 3.3, 4.7, 1.6],\n",
+       "        [6.3, 2.5, 5. , 1.9],\n",
+       "        [6.8, 3. , 5.5, 2.1],\n",
+       "        [5.7, 2.5, 5. , 2. ],\n",
+       "        [5.9, 3. , 4.2, 1.5],\n",
+       "        [5.6, 2.9, 3.6, 1.3],\n",
+       "        [6.1, 2.8, 4. , 1.3],\n",
+       "        [5.4, 3.7, 1.5, 0.2],\n",
+       "        [6.9, 3.2, 5.7, 2.3],\n",
+       "        [5.2, 3.5, 1.5, 0.2],\n",
+       "        [5. , 3.4, 1.6, 0.4],\n",
+       "        [5. , 2. , 3.5, 1. ],\n",
+       "        [6.4, 3.2, 5.3, 2.3],\n",
+       "        [5.4, 3.4, 1.5, 0.4],\n",
+       "        [6. , 2.2, 5. , 1.5],\n",
+       "        [6.3, 3.3, 6. , 2.5],\n",
+       "        [5.2, 2.7, 3.9, 1.4],\n",
+       "        [7. , 3.2, 4.7, 1.4],\n",
+       "        [6.5, 3. , 5.2, 2. ],\n",
+       "        [4.9, 2.4, 3.3, 1. ],\n",
+       "        [7.7, 3. , 6.1, 2.3],\n",
+       "        [5.2, 4.1, 1.5, 0.1],\n",
+       "        [6.7, 2.5, 5.8, 1.8],\n",
+       "        [6. , 3. , 4.8, 1.8],\n",
+       "        [6. , 3.4, 4.5, 1.6],\n",
+       "        [7.2, 3.2, 6. , 1.8],\n",
+       "        [5.6, 2.8, 4.9, 2. ],\n",
+       "        [5.1, 3.4, 1.5, 0.2],\n",
+       "        [6.4, 2.8, 5.6, 2.1],\n",
+       "        [4.6, 3.6, 1. , 0.2],\n",
+       "        [6.3, 2.3, 4.4, 1.3],\n",
+       "        [5. , 3. , 1.6, 0.2],\n",
+       "        [5. , 3.3, 1.4, 0.2],\n",
+       "        [6.3, 2.5, 4.9, 1.5],\n",
+       "        [4.9, 3.1, 1.5, 0.1],\n",
+       "        [6. , 2.9, 4.5, 1.5],\n",
+       "        [4.9, 3.1, 1.5, 0.2]]),\n",
+       " array([[6. , 2.7, 5.1, 1.6],\n",
+       "        [6.9, 3.1, 5.1, 2.3],\n",
+       "        [5.5, 2.3, 4. , 1.3],\n",
+       "        [6.1, 2.8, 4.7, 1.2],\n",
+       "        [6.4, 2.7, 5.3, 1.9],\n",
+       "        [6.7, 3. , 5. , 1.7],\n",
+       "        [5.6, 2.7, 4.2, 1.3],\n",
+       "        [6.5, 3.2, 5.1, 2. ],\n",
+       "        [5.7, 3. , 4.2, 1.2],\n",
+       "        [7.2, 3.6, 6.1, 2.5],\n",
+       "        [5.7, 4.4, 1.5, 0.4],\n",
+       "        [6.4, 3.2, 4.5, 1.5],\n",
+       "        [6.8, 3.2, 5.9, 2.3],\n",
+       "        [6.2, 2.2, 4.5, 1.5],\n",
+       "        [5.4, 3. , 4.5, 1.5],\n",
+       "        [4.8, 3. , 1.4, 0.1],\n",
+       "        [5.2, 3.4, 1.4, 0.2],\n",
+       "        [6.5, 3. , 5.5, 1.8],\n",
+       "        [4.6, 3.1, 1.5, 0.2],\n",
+       "        [4.7, 3.2, 1.6, 0.2],\n",
+       "        [5.7, 2.6, 3.5, 1. ],\n",
+       "        [4.9, 3.6, 1.4, 0.1],\n",
+       "        [6.7, 3.1, 5.6, 2.4],\n",
+       "        [6.1, 2.6, 5.6, 1.4],\n",
+       "        [6.5, 3. , 5.8, 2.2],\n",
+       "        [4.6, 3.2, 1.4, 0.2],\n",
+       "        [5.8, 2.8, 5.1, 2.4],\n",
+       "        [6.9, 3.1, 4.9, 1.5],\n",
+       "        [6.6, 3. , 4.4, 1.4],\n",
+       "        [5.5, 2.5, 4. , 1.3],\n",
+       "        [5.8, 2.6, 4. , 1.2],\n",
+       "        [5.9, 3.2, 4.8, 1.8],\n",
+       "        [5.7, 2.9, 4.2, 1.3],\n",
+       "        [7.6, 3. , 6.6, 2.1],\n",
+       "        [5.1, 3.7, 1.5, 0.4],\n",
+       "        [5. , 2.3, 3.3, 1. ],\n",
+       "        [4.8, 3.4, 1.9, 0.2],\n",
+       "        [5.5, 3.5, 1.3, 0.2]]),\n",
+       " array([1, 1, 1, 1, 2, 1, 1, 0, 1, 0, 2, 1, 1, 2, 2, 0, 0, 2, 1, 2, 0, 2,\n",
+       "        1, 1, 2, 1, 0, 0, 0, 0, 1, 0, 0, 2, 2, 2, 1, 0, 1, 2, 0, 1, 2, 1,\n",
+       "        2, 1, 0, 2, 2, 2, 0, 2, 0, 0, 0, 0, 1, 0, 2, 0, 2, 0, 2, 0, 0, 0,\n",
+       "        0, 0, 1, 2, 2, 2, 0, 2, 0, 1, 2, 2, 2, 1, 1, 1, 0, 2, 0, 0, 1, 2,\n",
+       "        0, 2, 2, 1, 1, 2, 1, 2, 0, 2, 2, 1, 2, 2, 0, 2, 0, 1, 0, 0, 1, 0,\n",
+       "        1, 0]),\n",
+       " array([1, 2, 1, 1, 2, 1, 1, 2, 1, 2, 0, 1, 2, 1, 1, 0, 0, 2, 0, 0, 1, 0,\n",
+       "        2, 2, 2, 0, 2, 1, 1, 1, 1, 1, 1, 2, 0, 1, 0, 0])]"
       ]
      },
      "execution_count": 7,
@@ -615,25 +615,23 @@
    "source": [
     "def build_model(model=\"\"):\n",
     "    X, y = download_data()\n",
+    "    X_train, X_test, y_train, y_test = split_data(X, y)\n",
     "\n",
     "    if model == \"knn\":\n",
     "        classifier = neighbors.KNeighborsClassifier()\n",
-    "        model = \"K Nearest Neighbors\"\n",
     "    elif model == \"svm\":\n",
     "        classifier = svm.SVC()\n",
-    "        model = \"Support Vector Machine\"\n",
     "    else:\n",
+    "        model = \"tree\"\n",
     "        classifier = tree.DecisionTreeClassifier()\n",
-    "        model = \"Decision Tree\"\n",
-    "    \n",
+    "\n",
     "    classifier.fit(X_train, y_train)\n",
     "\n",
     "    predictions = classifier.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, predictions)\n",
     "    print(\"Accuracy for {}: {}\".format(model, accuracy))\n",
-    "    \n",
-    "    return classifier\n",
-    "    "
+    "\n",
+    "    return classifier"
    ]
   },
   {
@@ -645,12 +643,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Decision Tree: 0.9473684210526315\n"
+      "Accuracy for tree: 0.8947368421052632\n"
      ]
     }
    ],
    "source": [
-    "model_decision_tree = build_model(\"decision tree\")"
+    "model_tree = build_model(\"tree\")"
    ]
   },
   {
@@ -662,7 +660,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for K Nearest Neighbors: 0.9473684210526315\n"
+      "Accuracy for knn: 0.9736842105263158\n"
      ]
     }
    ],
@@ -679,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Support Vector Machine: 0.9736842105263158\n"
+      "Accuracy for svm: 0.9736842105263158\n"
      ]
     }
    ],
@@ -718,8 +716,8 @@
    "source": [
     "X_new = np.array([[1, 2, 3, 4]])\n",
     "\n",
-    "prediction_decision_tree = model_decision_tree.predict(X_new)\n",
-    "print(\"Predicted Iris species using Decision Tree: {}\".format(iris_dataset.target_names[prediction_decision_tree]))\n",
+    "prediction_tree = model_tree.predict(X_new)\n",
+    "print(\"Predicted Iris species using Decision Tree: {}\".format(iris_dataset.target_names[prediction_tree]))\n",
     "\n",
     "prediction_knn = model_knn.predict(X_new)\n",
     "print(\"Predicted Iris species using K Nearest Neighbors: {}\".format(iris_dataset.target_names[prediction_knn]))\n",
