--- a/notebook/iris_classification_pipeline.ipynb
+++ b/notebook/iris_classification_pipeline.ipynb
@@ -1,6 +1,120 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "from sklearn import datasets\n",
+    "from sklearn import neighbors\n",
+    "from sklearn import svm\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "def download_data():\n",
+    "    iris_dataset = datasets.load_iris()\n",
+    "    X = iris_dataset.data\n",
+    "    y = iris_dataset.target\n",
+    "    return X, y\n",
+    "\n",
+    "\n",
+    "def split_data(X, y, test_size=0.25):\n",
+    "    return train_test_split(X, y, test_size=test_size)\n",
+    "\n",
+    "\n",
+    "def build_model(model=\"\"):\n",
+    "    X, y = download_data()\n",
+    "    X_train, X_test, y_train, y_test = split_data(X, y)\n",
+    "\n",
+    "    if model == \"knn\":\n",
+    "        classifier = neighbors.KNeighborsClassifier()\n",
+    "    elif model == \"svm\":\n",
+    "        classifier = svm.SVC()\n",
+    "    else:\n",
+    "        model = \"tree\"\n",
+    "        classifier = tree.DecisionTreeClassifier()\n",
+    "\n",
+    "    classifier.fit(X_train, y_train)\n",
+    "\n",
+    "    predictions = classifier.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    print(\"Accuracy for {}: {}\".format(model, accuracy))\n",
+    "\n",
+    "    joblib.dump(classifier, \"models/{}.pkl\".format(model))\n",
+    "    return classifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import kfp\n",
+    "from kfp import dsl\n",
+    "\n",
+    "\n",
+    "@dsl.pipeline(\n",
+    "    name='iris-classification',\n",
+    "    description='A basic pipeline example for iris classification'\n",
+    ")\n",
+    "def iris_classification_pipeline():\n",
+    "    tree = dsl.ContainerOp(\n",
+    "        name=\"Train using Decision Tree\",\n",
+    "        image=\"annajung/iris:latest\",\n",
+    "        command=[\"sh\", \"-c\"],\n",
+    "        arguments=[\"python iris_classification.py build_model tree\"],\n",
+    "        file_outputs={'output': '/tmp/accuracy_tree.txt'}\n",
+    "    )\n",
+    "\n",
+    "    knn = dsl.ContainerOp(\n",
+    "        name=\"Train using K Nearest Neighbors\",\n",
+    "        image=\"annajung/iris:latest\",\n",
+    "        command=[\"sh\", \"-c\"],\n",
+    "        arguments=[\"python iris_classification.py build_model knn\"],\n",
+    "        file_outputs={'output': '/tmp/accuracy_knn.txt'}\n",
+    "    )\n",
+    "\n",
+    "    svm = dsl.ContainerOp(\n",
+    "        name=\"Train using Support Vector Machine\",\n",
+    "        image=\"annajung/iris:latest\",\n",
+    "        command=[\"sh\", \"-c\"],\n",
+    "        arguments=[\"python iris_classification.py build_model svm\"],\n",
+    "        file_outputs={'output': '/tmp/accuracy_svm.txt'}\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
