Remove SVM algorythm
Remove Supported vector Machine algorythm and stay with KNN and Decision tree only.
Make Notebook generate yaml file.

--- a/notebook/iris_classification_pipeline.ipynb
+++ b/notebook/iris_classification_pipeline.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib\n",
+    "import joblib, IPython\n",
     "from sklearn import datasets\n",
     "from sklearn import neighbors\n",
     "from sklearn import svm\n",
@@ -32,8 +32,6 @@
     "\n",
     "    if model == \"knn\":\n",
     "        classifier = neighbors.KNeighborsClassifier()\n",
-    "    elif model == \"svm\":\n",
-    "        classifier = svm.SVC()\n",
     "    else:\n",
     "        model = \"tree\"\n",
     "        classifier = tree.DecisionTreeClassifier()\n",
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +60,7 @@
     "    name='iris-classification',\n",
     "    description='A basic pipeline example for iris classification'\n",
     ")\n",
+    "\n",
     "def iris_classification_pipeline():\n",
     "    tree = dsl.ContainerOp(\n",
     "        name=\"Train using Decision Tree\",\n",
@@ -78,14 +77,33 @@
     "        arguments=[\"python iris_classification.py build_model knn\"],\n",
     "        file_outputs={'output': '/tmp/accuracy_knn.txt'}\n",
     "    )\n",
+    "    \n",
+    "    with dsl.Condition(tree.output >= knn.output):\n",
+    "        c = dsl.ContainerOp(\n",
+    "            name='Train Tree',\n",
+    "            image=\"annajung/iris:latest\",\n",
+    "            command=['sh', '-c'],\n",
+    "            arguments=['python3  iris_classification.py save_final_model tree'],\n",
+    "            file_outputs={'output': '/tmp/tree.pkl'},\n",
+    "    )\n",
     "\n",
-    "    svm = dsl.ContainerOp(\n",
-    "        name=\"Train using Support Vector Machine\",\n",
-    "        image=\"annajung/iris:latest\",\n",
-    "        command=[\"sh\", \"-c\"],\n",
-    "        arguments=[\"python iris_classification.py build_model svm\"],\n",
-    "        file_outputs={'output': '/tmp/accuracy_svm.txt'}\n",
-    "    )"
+    "    with dsl.Condition(knn.output >= tree.output):\n",
+    "        c = dsl.ContainerOp(\n",
+    "            name='Train KNN',\n",
+    "            image=\"annajung/iris:latest\",\n",
+    "            command=['sh', '-c'],\n",
+    "            arguments=['python3  iris_classification.py save_final_model knn'],\n",
+    "            file_outputs={'output': '/tmp/knn.pkl'},\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kfp.compiler.Compiler().compile(iris_classification_pipeline, 'iris_classification_pipeline.yaml')"
    ]
   },
   {
