Set correct slide config to ml notebook
Signed-off-by: Anna Jung (VMware) <antheaj@vmware.com>

--- a/ml/iris_classification.ipynb
+++ b/ml/iris_classification.ipynb
@@ -144,6 +144,8 @@
    },
    "outputs": [],
    "source": [
+    "# Run terminal commands in the notebook cells by prepending with an exclamation mark\n",
+    "\n",
     "# check to see if scikit-learn is installed\n",
     "! python3 -m pip show scikit-learn"
    ]
@@ -181,22 +183,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import pprint\n",
-    "\n",
-    "pprint.pprint(iris_dataset.DESCR)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -206,13 +192,8 @@
    "source": [
     "### Step 2 - Prepare Data\n",
     "\n",
-    "Some of the steps involved in data preparations are\n",
-    "- Data Discovery\n",
-    "- Data Cleaning\n",
-    "- Data Transformation\n",
-    "- Data Sampling\n",
-    "- Data Split\n",
-    "- etc.\n",
+    "Some of the steps involved in data preparations are:\n",
+    "Data Discovery, Data Cleaning, Data Transformation, Data Sampling, Data Split, and etc.\n",
     "\n",
     "\n",
     "Let's learn basic skills to explore dataset using pandas!\n",
@@ -221,17 +202,10 @@
     "```\n",
     "! python3 -m pip show pandas\n",
     "```\n",
-    "- Install scikit-learn\n",
+    "- Install pandas\n",
     "```\n",
     "! python3 -m pip install -U pandas\n",
-    "```\n",
-    "- Let's try to answer these questions\n",
-    "    - [ ] How many columns?\n",
-    "    - [ ] What are the names of the columns?\n",
-    "    - [ ] How many rows exist with label \"Setosa\"?\n",
-    "    - [ ] Which label does min petal length belong to?\n",
-    "    - [ ] Which label does max petal length belong to?\n",
-    "    - [ ] What are the input variables and output variables?"
+    "```"
    ]
   },
   {
@@ -254,12 +228,29 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
     "! python3 -m pip install -U pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- Let's try to answer these questions\n",
+    "    - [ ] How many columns?\n",
+    "    - [ ] What are the names of the columns?\n",
+    "    - [ ] How many rows exist with label \"Setosa\"?\n",
+    "    - [ ] Which label does min petal length belong to?\n",
+    "    - [ ] Which label does max petal length belong to?\n",
+    "    - [ ] What are the input variables and output variables?"
    ]
   },
   {
@@ -458,7 +449,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -473,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -488,7 +482,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -497,7 +494,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Step 3 - Choose the Model\n",
     "\n",
@@ -509,7 +510,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Step 4 - Train the Model\n",
     "\n",
@@ -524,7 +529,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -532,8 +537,11 @@
     "from sklearn import tree\n",
     "\n",
     "# valid splitter: \"best\" or \"random\"\n",
-    "tree_classifier = tree.DecisionTreeClassifier(splitter=\"random\")\n",
-    "tree_classifier.fit(X_train, y_train)\n"
+    "# \"best\": takes feature with the highest importance\n",
+    "# \"random\": take the feature randomly\n",
+    "\n",
+    "# tree_classifier = tree.DecisionTreeClassifier(splitter=\"random\")\n",
+    "# tree_classifier.fit(X_train, y_train)"
    ]
   },
   {
@@ -542,7 +550,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -550,13 +558,18 @@
     "from sklearn import neighbors\n",
     "\n",
     "# valid neighbors <= n\n",
-    "knn_classifier = neighbors.KNeighborsClassifier(n_neighbors=2)\n",
-    "knn_classifier.fit(X_train, y_train)\n"
+    "\n",
+    "# knn_classifier = neighbors.KNeighborsClassifier(n_neighbors=2)\n",
+    "# knn_classifier.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Step 5 - Evaluate the Model\n",
     "\n",
@@ -567,7 +580,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -579,7 +595,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -598,7 +617,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -622,7 +641,7 @@
     "\n",
     "    predictions = classifier.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, predictions)\n",
-    "    print(\"Accuracy for {}: {}\".format(model, accuracy))\n",
+    "    print(\"accuracy={}\".format(accuracy))\n",
     "\n",
     "    return classifier"
    ]
@@ -633,7 +652,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -647,7 +666,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -678,7 +697,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -690,6 +709,29 @@
     "\n",
     "prediction_knn = model_knn.predict(X_new)\n",
     "print(\"Predicted Iris species using K Nearest Neighbors: {}\".format(iris_dataset.target_names[prediction_knn]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Steps achieved\n",
+    "\n",
+    "1. Collect Data\n",
+    "1. Prepare Data\n",
+    "1. Choose the model\n",
+    "1. Train the model\n",
+    "1. Evaluate the model's performance and predictions\n",
+    "\n",
+    "### Now What?\n",
+    "\n",
+    "- What if we get a new dataset to train?\n",
+    "- What if we want to test out more different parameters?\n",
+    "- What if we want to test different models?\n"
    ]
   }
  ],
