change notes in pipeline jupyter notebook
Signed-off-by: Diana Atanasova <dianaa@vmware.com>

--- a/pipeline/iris_classification_pipeline.ipynb
+++ b/pipeline/iris_classification_pipeline.ipynb
@@ -8,8 +8,6 @@
     }
    },
    "source": [
-    "<img src=\"./img/pipeline.png\" alt=\"kubeflow pipeline\" width=\"300\" align=\"left\" style=\"padding-left: 10px; padding-right: 40px;\"/> \n",
-    "\n",
     "# What are Kubeflow Pipelines? "
    ]
   },
@@ -65,23 +63,12 @@
     }
    },
    "source": [
-    "Pipeline component is made up of a code, packaged as a Docker image. When you run a pipeline, the system launches one or more Kubernetes Pods corresponding to the steps (components) in your workflow (pipeline). The Pods start Docker containers, and the containers in turn start your programs.\n",
-    "This provides composability and scalability.\n",
-    "After developing your pipeline, you can upload your pipeline using the Kubeflow Pipelines UI or the Kubeflow Pipelines SDK.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
     "The left upper image, shows the pipeline this workshop creates. It is a simple pipeline with just a few steps:\n",
     "1. The first steps train models using respectively decision tree and K-nearest neighbours algorythms. These two steps are executing in paralel. \n",
     "2. The results from the these steps are taken in consideration in the next steps - conditional steps. These steps check which model provides higher accuracity. \n",
-    "3. Depending on the results of the conditional components only the model that give higher accuracity is saved for later use/serving."
+    "3. Depending on the results of the conditional components only the model that give higher accuracity is saved for later use/serving.\n",
+    "\n",
+    "When a pipeline is run, the system launches one or more Kubernetes Pods corresponding to the steps in the workflow (pipeline). The Pods start Docker containers, and the containers in turn start your programs."
    ]
   },
   {
@@ -98,9 +85,9 @@
     "    - Create a Dockerfile\n",
     "    - Build container image\n",
     "    - Push image into a container registry\n",
-    "3. Define a Pipeline \n",
-    "    - using [kfp.dsl](https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.dsl.html) library \n",
-    "    - levarage the already created Docker image  "
+    "3. Define a Pipeline\n",
+    "    - Define component's specifications (interfaces)\n",
+    "    - Leverage [kfp](https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.html) library "
    ]
   },
   {
@@ -231,11 +218,11 @@
     }
    },
    "source": [
-    "`\n",
+    "```\n",
     "FROM python:3.8-slim-buster\n",
     "RUN pip3 install sklearn\n",
     "ADD iris_classification.py iris_classification.py\n",
-    "`"
+    "```"
    ]
   },
   {
@@ -248,9 +235,7 @@
    "source": [
     "### Build container image\n",
     "\n",
-    "We already have created and uploaded the image with our ML code.\n",
-    "\n",
-    "Docker hub image - \"annajung/iris:latest\"\n",
+    "We already have created and uploaded the image with our ML code. Dockerhub image - **annajung/iris:latest**\n",
     "\n",
     "`docker build --tag \"iris:latest\" -f Dockerfile . `"
    ]
