Change the text in pipeline iris jupyter notebook
Signed-off-by: Diana Atanasova <dianaa@vmware.com>

--- a/pipeline/iris_classification_pipeline.ipynb
+++ b/pipeline/iris_classification_pipeline.ipynb
@@ -63,6 +63,17 @@
     }
    },
    "source": [
+    "Pipeline component is made up of a code, packaged as a Docker image. When a pipeline is run, the system launches one or more Kubernetes Pods corresponding to the steps (components) in the pipeline. The Pods start Docker containers, and the containers in turn start your programs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "The left upper image, shows the pipeline this workshop creates. It is a simple pipeline with just a few steps:\n",
     "1. The first steps train models using respectively decision tree and K-nearest neighbours algorythms. These two steps are executing in paralel. \n",
     "2. The results from the these steps are taken in consideration in the next steps - conditional steps. These steps check which model provides higher accuracity. \n",
@@ -81,111 +92,12 @@
    "source": [
     "# Steps to create a Pipeline\n",
     "1. Write the ML python code\n",
-    "2. Containerize component’s code\n",
-    "    - Create a Dockerfile\n",
-    "    - Build container image\n",
-    "    - Push image into a container registry\n",
-    "3. Define a Pipeline\n",
+    "3. Define a Pipeline specification\n",
+    "    - Containerize component’s code\n",
     "    - Define component's specifications (interfaces)\n",
-    "    - Leverage [kfp](https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.html) library "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "##  1. ML Python Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import joblib, IPython\n",
-    "from sklearn import datasets\n",
-    "from sklearn import neighbors\n",
-    "from sklearn import tree\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def download_data():\n",
-    "    iris_dataset = datasets.load_iris()\n",
-    "    X = iris_dataset.data\n",
-    "    y = iris_dataset.target\n",
-    "    return X, y\n",
-    "\n",
-    "\n",
-    "def split_data(X, y, test_size=0.25):\n",
-    "    return train_test_split(X, y, test_size=test_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def build_model(model=\"\", parameter=\"\"):\n",
-    "    X, y = download_data()\n",
-    "    X_train, X_test, y_train, y_test = split_data(X, y)\n",
-    "\n",
-    "    if model == \"knn\":\n",
-    "        classifier = neighbors.KNeighborsClassifier(n_neighbors=int(parameter))\n",
-    "    else:\n",
-    "        model = \"tree\"\n",
-    "        classifier = tree.DecisionTreeClassifier(splitter=parameter)\n",
-    "\n",
-    "    classifier.fit(X_train, y_train)\n",
-    " \n",
-    "    predictions = classifier.predict(X_test)\n",
-    "    accuracy = accuracy_score(y_test, predictions)\n",
-    "    print(\"Accuracy for {}: {}\".format(model, accuracy))\n",
-    "\n",
-    "    text_file = open(\"/tmp/accuracy_{}.txt\".format(model), \"w\")\n",
-    "    text_file.write(\"{}\".format(accuracy))\n",
-    "    text_file.close()\n",
     "    \n",
-    "    return classifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def save_final_model(model=\"\", parameter=\"\"):\n",
-    "    classifier = build_model(model, parameter)\n",
-    "    joblib.dump(classifier, \"/tmp/{}.pkl\".format(model))"
+    "    \n",
+    "*Leverage [kfp](https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.html) library "
    ]
   },
   {
@@ -196,72 +108,32 @@
     }
    },
    "source": [
-    "## 2. Containerize pipeline component’s code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Create a Dockerfile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "##  1. ML Python Code\n",
+    "You could find the ML code here:\n",
+    "[iris_classification.py](../ml/iris_classification.py)\n",
+    "\n",
+    "-----\n",
+    "**def build_model(model=\"\", parameter=\"\")**\n",
+    "\n",
     "```\n",
-    "FROM python:3.8-slim-buster\n",
-    "RUN pip3 install sklearn\n",
-    "ADD iris_classification.py iris_classification.py\n",
+    "Build ML model\n",
+    "\n",
+    ":param str model: Specify the algorithm to be used for building the model - \"knn\" or \"tree\"\n",
+    ":param str parameter: Parameter used when building the model. \n",
+    "    In case of knn \"n_neighbors\" - int\n",
+    "    in case of tree \"splitter\" - random\n",
+    "``` \n",
+    "------------\n",
+    "**def save_final_model(model=\"\", parameter=\"\")**\n",
+    "\n",
+    "```\n",
+    "Build a ML model and save it in a file\n",
+    "\n",
+    ":param str model: Specify the algorithm to be used for building the model - \"knn\" or \"tree\"\n",
+    ":param str parameter: Parameter used when building the model. \n",
+    "    In case of knn \"n_neighbors\" - int\n",
+    "    in case of tree splitter {“best”, “random”}\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Build container image\n",
-    "\n",
-    "We already have created and uploaded the image with our ML code. Dockerhub image - **annajung/iris:latest**\n",
-    "\n",
-    "`docker build --tag \"iris:latest\" -f Dockerfile . `"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Push image into a container registry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "`docker login <hub-server>`\n",
-    "\n",
-    "`docker push <hub-user>/<repo-name>:<tag>`"
    ]
   },
   {
@@ -277,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,10 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "###################################################################################\n",
+    "# 1.Define a Pipeline specification\n",
+    "#\n",
+    "# 2.Define components specifications:\n",
+    "#     - Component that builds model based on Decision Tree\n",
+    "#     - Component that builds model based on K-Nearest Neighbors\n",
+    "#     - Conditional Component that check if the Decision Tree has a higher accuracy\n",
+    "#         :Component that save tree model into a file\n",
+    "#     - Conditional Component that check if the KNN has a higher accuracy\n",
+    "#         :Component that save knn model into a file\n",
+    "###################################################################################\n",
+    "\n",
     "@dsl.pipeline(\n",
     "    name='iris-classification',\n",
     "    description='A basic pipeline example for iris classification'\n",
@@ -314,7 +198,7 @@
     "\n",
     "    with dsl.Condition(tree.output >= knn.output):\n",
     "        dsl.ContainerOp(\n",
-    "            name='Train Tree',\n",
+    "            name='Save Tree model',\n",
     "            image=\"annajung/iris:latest\",\n",
     "            command=['sh', '-c'],\n",
     "            arguments=[\"python3  iris_classification.py save_final_model tree \" + str(splitter)],\n",
@@ -323,7 +207,7 @@
     "\n",
     "    with dsl.Condition(knn.output > tree.output):\n",
     "        dsl.ContainerOp(\n",
-    "            name='Train KNN',\n",
+    "            name='Save KNN model',\n",
     "            image=\"annajung/iris:latest\",\n",
     "            command=['sh', '-c'],\n",
     "            arguments=[\"python3  iris_classification.py save_final_model knn \" + str(n_neighbors)],\n",
@@ -342,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/didi/.local/lib/python3.8/site-packages/kfp/components/_data_passing.py:170: UserWarning: Missing type name was inferred as \"Integer\" based on the value \"2\".\n",
+      "  warnings.warn('Missing type name was inferred as \"{}\" based on the value \"{}\".'.format(type_name, str(value)))\n",
+      "/home/didi/.local/lib/python3.8/site-packages/kfp/dsl/_container_op.py:1207: FutureWarning: Please create reusable components instead of constructing ContainerOp instances directly. Reusable components are shareable, portable and have compatibility and support guarantees. Please see the documentation: https://www.kubeflow.org/docs/pipelines/sdk/component-development/#writing-your-component-definition-file The components can be created manually (or, in case of python, using kfp.components.create_component_from_func or func_to_container_op) and then loaded using kfp.components.load_component_from_file, load_component_from_uri or load_component_from_text: https://kubeflow-pipelines.readthedocs.io/en/stable/source/kfp.components.html#kfp.components.load_component_from_file\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "kfp.compiler.Compiler().compile(iris_classification_pipeline, 'iris_classification_pipeline.yaml')"
    ]
